<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_login_linearlayout_center_margin"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_login_tablerow_up_margin_bottom"
                android:layout_marginTop="@dimen/activity_login_tablerow_up_margin_top"
                android:layout_weight="1"
                android:background="@drawable/shape_login_tablerow" >

                <ImageView
                    
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/activity_login_imageview_padding_left_right"
                    android:paddingRight="@dimen/activity_login_imageview_padding_left_right"
                    android:src="@drawable/login_icon_user" />

                <EditText
                    android:id="@+id/userEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:background="@drawable/selector_login_edittext"
                    android:hint="@string/activity_login_edittext_username"
                    android:paddingLeft="@dimen/activity_lgoin_edittext_padding_left_right"
                    android:paddingRight="@dimen/activity_lgoin_edittext_padding_left_right"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/color_light"
                    android:textColorHint="@color/color_text_1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_login_tablerow_down_margin_bottom"
                android:layout_marginTop="@dimen/activity_login_tablerow_down_margin_top"
                android:layout_weight="1"
                android:background="@drawable/shape_login_tablerow" >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/activity_login_imageview_padding_left_right"
                    android:paddingRight="@dimen/activity_login_imageview_padding_left_right"
                    android:src="@drawable/login_icon_key" />

                <EditText
                    android:id="@+id/passEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:background="@drawable/selector_login_edittext"
                    android:hint="@string/activity_lgoin_edittext_password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/activity_lgoin_edittext_padding_left_right"
                    android:paddingRight="@dimen/activity_lgoin_edittext_padding_left_right"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/color_light"
                    android:textColorHint="@color/color_text_1" />
            </TableRow>
        </TableLayout>

        <ImageButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_login_imagebutton_top_buttom"
            android:layout_marginLeft="@dimen/activity_login_imagebutton_left"
            android:layout_marginTop="@dimen/activity_login_imagebutton_top_buttom"
            android:layout_weight="7"
            android:background="@drawable/shape_login_imagebutton"
            android:scaleType="fitCenter"
            android:src="@drawable/login_icon_login" >
        </ImageButton>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/activity_login_copright"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/color_text_1" />

</LinearLayout>